# videosdk-rtc-api-server-examples

./: README.md
dotnet/: jwt-example.sln
dotnet/jwt-example/: Program.cs  README.md  Startup.cs  WeatherForecast.cs  jwt-example.csproj
dotnet/jwt-example/Controllers/: HelloController.cs
dotnet/jwt-example/Properties/: launchSettings.json
go/: README.md  go.mod  go.sum  main.go
java/: README.md  pom.xml
java/src/main/java/com/example/demo/: DemoApplication.java
nodejs/: .env.example  README.md  package-lock.json  package.json  server.js
php/: README.md  composer.json  index.php
python/: .gitignore  README.md  main.py  requirements.txt
ruby/: Gemfile  README.md  package.json
ruby/app/controllers/: main_controller.rb
ruby/app/views/layouts/: application.html.erb
ruby/config/: credentials.yml.enc  routes.rb
rust/: Cargo.toml  README.md
rust/src/: handlers.rs  main.rs
